--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync-webpack-plugin": "^1.1.4",
+    "bulma": "^0.4.1",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "img-loader": "^2.0.0",
     "jquery": "^3.2.1",
+    "lost": "^8.0.0",
     "node-sass": "^4.5.2",
+    "normalize.css": "^6.0.0",
     "postcss-loader": "^1.3.3",
     "postcss-smart-import": "^0.6.11",
     "precss": "^1.4.0",
@@ -32,8 +35,10 @@
     "style-loader": "^0.16.1",
     "stylefmt": "^5.3.2",
     "stylefmt-loader": "^1.2.3",
+    "stylelint-config-lost": "0.0.3",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-webpack-plugin": "^0.7.0",
+    "tachyons": "^4.7.1",
     "vue": "^2.2.6",
     "vue-loader": "^11.3.4",
     "webpack": "^2.4.1",
