Added some example icons

--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "stylelint-config-lost": "0.0.3",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-webpack-plugin": "^0.7.0",
-    "tachyons": "^4.7.1",
+    "svg-sprite-loader": "^2.0.4",
+    "svg-spritemap-webpack-plugin": "^1.0.0",
+    "svg4everybody": "^2.1.8",
     "vue": "^2.2.6",
     "vue-loader": "^11.3.4",
     "webpack": "^2.4.1",
